<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Toolbar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        app:title="TP5.1"
        app:titleTextColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tvUri"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/uri_vide"
        android:maxLines="1"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="76dp"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="272dp"
        android:layout_height="274dp"
        android:layout_marginTop="12dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/image_name"
        android:scaleType="centerInside"
        android:src="@drawable/tete"
        app:layout_constraintBottom_toTopOf="@+id/layoutButtons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvUri"
        app:layout_constraintVertical_weight="0.7"
        android:layout_marginBottom="120dp"/>


    <!-- Les ImagesBoutons -->
    <LinearLayout
        android:id="@+id/layoutButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


    <ImageButton
        android:id="@+id/btnCharger"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginEnd="32dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:backgroundTint="@color/purple_700"
        android:contentDescription="@string/btn_charger"
        android:scaleType="centerInside"
        android:src="@drawable/dossier"

        />

    <ImageButton
        android:id="@+id/btnAnnuler"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/annuler"
        android:backgroundTint="@color/purple_700"
        android:scaleType="centerInside"
        android:src="@drawable/tourner"
         />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>